<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@color/white">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:id="@+id/image_logo"
                android:background="@mipmap/logos"/>

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_seventeen"
                android:text="@string/app_name"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/text_size_seventeen"
                android:id="@+id/tv_heading1"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dp30"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/smartphone"
                    android:id="@+id/iv_phone"
                    android:layout_height="@dimen/dp30" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_number"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/light_gray"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_number"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:digits="1234567890"
                        android:paddingStart="@dimen/dp35"
                        android:gravity="top"
                        android:hint="@string/str_phone_number"
                        android:inputType="textFilter|number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/gray"
                        android:paddingLeft="@dimen/dp30" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>
             <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/btn_submit_id"
                android:background="@drawable/app_bar_background"
                android:text="@string/str_login"
                />

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/tv_explore_id"
            android:text="@string/str_i_just_wanna_explore"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"/>

        <View
            android:id="@+id/animate_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="invisible"
            />
    </RelativeLayout>


</ScrollView>